<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="anketse_berhan_name">ዐንቀጸ ብርሃን</string>
    <string name="app_name">ዉዳሴ ማርያም</string>
    <string name="app_version">ዉዳሴ ማርያም 1.0</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="developer_email">robelkasahun.1@gmail.com</string>
    <string name="developer_name">Developed by Robel Kasahun Ayelew</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="melkea_eyesus">ኢየሱስ ኢየሱስ ኢየሱስ ክርስስቶስ ዘሠረፅከ ኢምቤተ ሌዌ፡ ኮሬባዊ መለኮታዊ፡ ቃል ሰማያዊ እም ድንግል ተወልደ። ሰላም ለዝክረ ስምከ ስመ መሓላ ሰኢይሔሱ፡ ዘአንበረ ቅድመ እግዚአብሔር በአትሮንሱ፡ ኢየሱስ ክርስቶስ ለዳዊት ባሕርየ ከርሡ፡ አክሊለ ስምከ እንዘ ይትቄጸል በርእሱ፡ አህጉረ ፀር ወረሰ ኢያሱ። ሰላም ለሥዕርተ ርእስከ ዘሥሙር አብቋሉ፡ ወጽፋቅ ጥቀ ለአርዘ ሊባኖስ አምሳለ ቄጽሉ፡ ኢየሱስ ክርስቶስ ሊቀ ካህናት ዘላዕለ ኩሉ፡ ይጸሐፍ በልሳንየ ለውዳሴከ ፈደሉ፡ ኢይትኃደግ ዲበ ምድር ንባቡ ወቃሉ።\10\10 ሰላም ለርእሰከ በመንበረ ክሳድ ዘተሣረረ፡ እንዘ ማእሰ ሥጋ ይለብስ ወእንዘ ይትገለበብ ጸጉረ፡ ኢየሱስ ክርስቶስ ከመ ቃልከ ነገረ፡ ይወርሱ በእንቲአከ ንዳያነ ዓለም ክብረ፡ ወቀደምትኒ ይከዉኑ ድኅረ። ሰላም ለገጽከ እም ሥነ ኦርይሬስ ስቡሕ፡ ወፍሡሕ ከመ ወርኅ ዘአሜገሃህ፡ ኢየሱስ ክርስቶስ ታቦተ ሕይወቱ ለኖኅ፡ ኅብአኒ እግዚኦ በውሣጤከ ስፋሕ፡ ማየ ኩነኔ አመ ዘንመ አይኅ። ሰላም ለቀራንብቲከ ከመ ክልኤ ክንፈ ኪሩብ፡ እለ ይጸልላ ወትረ አዕይንቲከ ዘርግብ፡ ኢየሱስ ክርስቶስ እደ መዝራእቱ ለአብ፡ አስተጋበ ውስተ ልብየ አቅማሐተ ኩሉ ጥበብ፡ ከመ ጽጌያተ ዘገዳም ያስተጋብእ ንህብ።\10\10 ሰላም ለአዕይንቲከ ከመ ምሉእ ምዕቃለ ማይ፡ እለ ይትረአያ ወትረ በመንበረ መጽሔት ርሡይ፡ ኢየሱስ ክርስቶስ መስተሥርየ ኩሉ ጌጋይ፡ ንዝኅኒ እግዚኦ በአዛብከ ሠናይ፡ ወአፃዕድወኒ እምበረድ ጽሩይ። ሰላም ለአዕዛኒከ ጽልዋተ እለ ኮና፡ አምኅ ነገር ያብኣ ለመኮንነ ውሥጥ ሕሊና፡ ኢየሱስ ክስቶስ ዘያዕቆብ ዓምደ ደመና፡ ምርሐኒ እግዚኦ ኅበ ይትፈቀድ ፍና፡ በዓመተ ርስዐን ወድካም ኢይርአይ ሙስና። ሰላም ለመላትሒከ እለ ይፈርያ አፈዋተ፡ ከመ ርኄ አፈው ዘይፄኑ ርኁቀ ፍኖተ፡ ኢየሱስ ክርስቶስ እስመ አበ ንፍስየ አንተ በሎሙ ለመላእክት ተፈሥሑ ሊተ፡ ረከብክዎ ለወልድየ በከንቱ ዘሞተ።\10\10 ሰላም ለአዕናፈከ መሳክወ ፄና ወአናቅጽ፡ እለ ውዱዳት እማንቱ ማእከለ ክልኤ አብይጽ፡ መልአከ ሕይወትየ ክርስስቶስ አስተሪየኒ በገጽ፡ ናሁ ተመሠጥኩ በጣዕመ መስቀልከ ዕፅ፡ ወተነደፍኩ በፍቅርከ ሐጽ። ሰላም ለከናፍሪከ ሙኃዛተ ከርቤ ሐዋዝ፡ እምጽጌ ገዳማት ኩሎን ዘፄናሆን ምዑዝ፡ ኢየሱስ ክርስቶስ በግዐ ይስሐቅ እኁዝ፡ ይተከዐው ዉስተ አፋየ ከመ አዜባዊ ውኂዝ፡ ነቅዐ ገቦከ በኩናት ርጉዝ። ሰላም ለአፍከ ለዮሐንስ ዘስዐሞ፡ ንጽሐ ሕሊናሁ ወልቡ ለዓይነ ፍትወትከ ሶበ አደሞ፡ ኢየሱስ ክርስቶስ መፍቀሬ የዋሃት እምሃት እምተ ቀይሞ፡ ጸግወኒ ማዕፆ አፍ እንተ ይእቲ አርምሞ፡ ለትዕግሥትካ ከመ\10\10 አእምር ዐቅሞ። ሰላም ለአስናኒከ አይተ አዕናቍ እለ ተሰክዓ፡ በፈትለ ሥጋ ወደም እስከ ሥረዊሆን ጸንቦ፡ ኢየሱስ ክርስቶስ ዘተሰመይከ ምሥዋዐ ከርስየ ርኅበ ኢግዚኦ ወውሣጤ ጉርዔየ ጸምአ ፡ እንበለ ኩነኔ ሀበኒ ሥጋከ መብልዐ። ሰላም ለልሳንከ በደብረ ታቦር ዘአልኆሰስ፡ ለብርሃን ዐቢይ እስከ ጽላሎቱ ተሐውሰ፡ ነበልባለ እሳት ክርስስቶስ ዘተዋሐድከ ጳጦስ፡ በዋዕየ ፍቅርከ ከመ ሥጋወ አእዋም የብሰ፡ ውሣጤ ሕሊናየ ነደ ወልብየ ጤስ።\10\10 ሰላም ለቃልከ እማእሠሪሁ ዘፈትሖ፡ ለፍቅር አልአዛር ኃይለ ሥልጣን ሞት ድኅረ ሞቅሖ፡ ኢየሱስ ክርስቶስ ንጉሥ ሰላም ወተራኅርኆ፡ አባ ወአቡየ እሴብሐከ ሰብሖ፡ ለአንቀጽከ ጸግወኒ መርኆ። ሰላም ለእስትንፋስከ እስትንፋስ ላህብ ምውቅ፡ ጊዜ ፍና ሠርክ ዘነፍሐ ገነተ ኅሩያን ደቂቅ፡ ኢየሱስ ክርስቶስ ጠፈረ ሃይማኖት ወጽድቅ ይትወኅውኁ ከዋክብት በአየርከ ምጡቅ፤ ወያንበሰብሱ ደመናት በዐረብ ወሠርቅ። ሰላም ለጉርዔከ በጽምአ ፍቅረ ሰብእ ሐማሚ፡ እስከ ስቴ ሐሞት ጥዕመ ወዘወይነ ትፍሥሕት ከራሚ፡ ኢየሱስ ክርስቶስ መምህረ ጳዉሎስ ዘብንያሚ፡ አመ ነሥአ ማኅተመ ጸጋ እንዘ ስመከ ይሰሚ፡ አልቦ አይሁድ ወአልቦ አረሚ።\10\10 ሰላም ለክሣድከ ግብረ መንፈስቅዱስ ኬኒያ፡ አዳም ሥና ወመንክር ላህያ፡ ኢየሱስ ክርስቶስ ነቢይ ወሓዋርያ፡ አመ ወፅአ ስሙዓቲከ በአድያመ ኩሉ ሶርያ፡ ብፁዓት አዕይንት ኪያከ ሶርያ፡ ብፁዓት አዕይንት ኪያከ ዘርእያ። ሰላም ለመትከፍትከ ከመ ልብሰ ክህነት ለጉዮ፡ ጊዜ ፀአተ ፍትሕ ዘፆረ አርዑተ መስቀል በቀራንዮ፡ ኢየሱስ ክርስቶስ በግዐ መድኅኒት ወአስተሥርዮ፡ አስተዳሎከ ለርእስከ ውስተ ዐፀደ ግፍዕ ተርእዮ፡ ወኩሎ በዘይደሉ አቅደምከ ሐልዮ።\10\10 ሰላም ለዘባንከ እመለኮቱ ዘኢተዐርቀ፡ እንዘ በአፍአሁ ይትዌከፍ ጥብጣቤ ሕማማት መጽዕቀ፡ ጉንደ ሐረገ ወይን ክርስቶስ እንተ ትፀውር አዕፁቀ፡ በቤተ ከብካብ ጊዜ ትገብር ምርፋቀ፡ ለአስካልከ ረስየኒ ዝቀ። ሰላም ለእንግድዓከ ቀላየ ልቡና ወአእምሮ፡ በሐመረ ፍትወት ወጻሕቅ ልበ ጠቢባን ዘኢሰፈሮ፡ ኢየሱስ ክርስስቶስ ኂሩት ወተፋቅሮ፡ ሶበ ይገሥሥ ሕልናየ ለመንዲልከ ዘፈሮ፡ ንቅዐ ኅጢአትየ ለገበርከ እምድሩ ይሠሮ። ሰላም ለኅፅንከ ምርፋቀ በረከት ወሣህል፡ ዘአስመከ ቦቱ ወልደ ዘበዴዎስ ድንግል፡ ኢየሱስ ክርስቶስ ሃይማኖትየ ወንጌል፡ ከመዕፀ ሐምል ስፍሕተ አዕፅቅ ወቄጽል፡ ብዙኅተ አዕዋፈ አጽልሎተ ትክል።\10\10 ሰላም ለአኢዳዊከ ጽቡረ እለ ገብራ፡ በምራቀ አፍከ ቅዱስ አዕይንተ ዕዉር ይፍጥራ፡ ትምህርተ ኅቡአት ክርስቶስ ዘትትነገር ኢምጵርስፎራ፡ ነገስታት በእንቲአከ ይገድፋ ጌራ፡ ወዕጠቆሙ ይፈትራ። ሰላም ለመዛርዒከ ከመ ቀስተ ብርት ጽኑዕ፡ እለ ያነትዓ ፀረ አመ ዕለተ መንፈስ ወጸብዕ። ኢየሱስ ክርስቶስ ጠረጴዛየ ምሥዋዕ፡ አስስትየኒ ማየ ሕይወት ኢመስቀልከ ጽዋዕ፡ ዘእንበሌሁ ኢይድኅን ሰብእ። ሰላም ለኩርናዕከ ኩርናዐ ክቡድ አንበሳ፡ ዘቀጥቀጠ ኩሎ አርእስተ ሥቡሐን እንስሳ፡ ኢየሱስ ክርስቶስ ሞገሰ ዳንኤል ነቢየ ሱሳ፡ ድኅረ ተፈጸመ ሱባዔ ሰንበታት ስሳ፡ በምጽአትከ ተኅትመ አበሳ።\10\10 ሰላም ለእመትከ መስፈርተ መዛርዕ ወእድ፡ እስከ ጽንፈ መስቀል በሐብል ዘስሐብዎ አይሁድ፡ ኢየሱስ ክርስቶስ እምነ አእላፍ ውሉድ፡ ኅድፈኒ ብጥበብከ እምተሠጥሞ ጌጋይ ክቡድ፡ ናሁ በላዕሌየ ተንሥኤ ሞገድ። ሰላም ለእራኅከ መክፈልተ ሕማማት ሱቱፍ፡ ወቅንዋቲሁ እኤምኅ በአፍ፡ ኢየሱስ ክርስቶስ በላዕለ ቅዱሳን ዕሩፍ፡ ይፀንስ ውስተ ከርሥየ ዘርአ ቃልከ መጽሐፍ፡ ፀዳለ እምፀዳል ከመ ትፀንስ ዖፍ። ሰላም ለአፃብዒከ አፃብዐ አዳም ዘተኬነዋ፡ ወነቀላ ዐፅመ በእንተ ሕይወታ ለሔዋን፡ ኢየሱስ ክርስቶስ አመ ተለዐልከ እምድረ ፄዋ፡ ለገነተ ጽድቅ ዘእደ ሱራፈ ዐፀዋ፡ ቤዛ ኅጥአን ኩሎሙ ደምከ አርኅዋ።\10\10 ሰላም ለአፅፋረ እዴከ ዘኅበሪሆን ፀዐዳ፡ በምግባር ወግእዝ እለ ይትዋሐዳ፡ ኢየሱስ ክርስቶስ ምስፍና አባሉ ለይሁዳ፡ ለመንግሥትከ ስፋኒት እንዘ ይትመሐለሉ ዐዉደ፡ ሰብአ ሰገል አወፈዩ ጋዳ። ሰላም ለገቦከ ዐዘቅተ ሥጋዌ ፍሉሕ፡ እንተ እምኔሁ ተውህበ ፈልፈለ ቅዱሳት ወንጽሕ፤ ኢየሱስ ክርስቶስ ዘኢሳይያስ መካሕ፡ አመ አስትርአይከ በልብሰ ባሦር ቀይሕ፡ መልአከ ሞት ተሠጥመ በላህ። ሰላም ለከርሥከ ዘኢትፈተን መዝገቡ፡ ም ዕመቁ ወሚ ራኅቡ፡ ኢየሱስ ክርስቶስስ ለወንጌል ንግሥከ ባሕር አስትአ በረከት ወሀቡ፡ ወእለ የኅድሩ ዲበ የብስ አምኅ አቅረቡ። ሰላም ለልብከ ቅሩበ ኩልያት\10\10 ምንታዌ፡ እንተ ያንሰሐስሕ ቦቱ መንፈስ ሕሊናከ ኅበ ህላዌ፡ ኢየሱስ ክርስቶስ ፍጹመ ትስብእት ወሥጋዌ፡ በቃለ እንቲአከ አመ ትትፍታህ ነነዌ፡ ውስተ መቅደስከ ረስየኒ ሠርዌ። ሰላም ለሕሊናከ ዘይሔሊ ሠናያተ፡ ለውሉደ ሰብእ ምሕረተ፡ ክርስቶስ ብርሃን ዘአስሰልከ ጽልመተ፡ ላዕለ ኪሩቤል ነቢረከ ዘትሬኢ ቀላያተ፡ ስብሕኒ ወልዑል አንተ። ሰላም ለኅንብርትከ ማእከለ ጠባይዕ ዘተመልአከ፡ በኩሉ ቱስሕቱ እንዘ ይትሜስል ማእከከ፡ መንግሥተ ሰማያት ክራስቶስ ከመ ዮሓንሰ ሰበከ፡ በሐፍ ወበድካም እለ አሥመሩ ኪያከ፡ ዲናረ ሃይማኖት ነሢኦሙ የአትው ሠርከ።\10\10 ሰላም ለሐቌከ እንዘቦ ልዕልና፡ ከመ ገብር ድኩም ዘቀነተ ሐብለ ትሕጥና፡ ኅብስተ ሕይወቶሙ ክርስቶስ ለእለ ይነሥኡ ስመ ክርስትና፡ አኮአ ኅብስተ እስራኤል መና፡ ዘዕሤተ ሞት ፈደየ በሲና። ሰላም ለአቍያጺከ አዕማድ ያቁም ወበለዝ፡ እለ ይፀወራ ቦቶን መልክዐተ ኩሉ ትእዛዝ፡ ኢየሱስ ክርስቶስ ምጽላለ ሕይወትየ አርዝ፡ ተበአሶ በጽላሎትከ ለአርዌ ዐመፃ ወሕምዝ፡ ኢይሳነነኒ ለገብርከ ዳግመ እምዝ። ሰላም ለአብራኪከ እለ አውተራ ስግደተ፡ እንዘ የዓርጋ ላዕለ ወእንዘ ይወርዳ ታሕተ፤ ጊዜ ተቀባዕከ ክርስቶስ ዘአልቦስጥሮስ ዕፍረተ፡ ገብርከሰ እምፈተውኩ አሜሃ ዕለተ፡ ማርያምሃ ትኩነኒ እኅተ።\10\10 ሰላም ለአእጋሪከ እለ ጠብዓ ለቀዊም፡ ቅድመ ጲላጦስ ፈታሂ መስፍነ ይሁዳ ወሮም፡ ኢየሱስ ክርስቶስ ዘትማልም ወዮም፡ ኅበወረደ ወነጠበ ዝናመ አእጋሪከ ደም፡ ለመስቀልከ በሰጊድ ሰላም። ሰላም ለስኰናከ እንተ ይስተጋብእ ኩሎ፡ ኅበ ኅደገ ወቀጽዐ ውስተ ሠሌዳ ኰኩሕ ሥዕሎ፡ ኢየሱስ ክርስቶስ ለመልአከ ዓለም ዘትትቤቀሎ፡ ስብሐቲከ እርአይ እግዚኦ እምቅድመ ዓለማት ዘሀሎ፡ መንጦላዕተ ዓይንየ ቅላዕ ወአብርህ ጸዳሎ።\10\10 ሰላም ለመከየድከ አሐዱ አሐዱ፡ ውስተ ቤተ መቅደስ ለምህሮ እለ ገይሠ ለመዱ፡ ኢየሱስ ክርስቶስ ዘመዓዛ ፍቅርከ ዕቍረ ናርዱ፡ አኅዊክ ስማዕታት ቈላተ ሕማማት ወረዱ፡ ወጻድቃኒከ ገዳማተ ዖዱ። ሰላም ለአፃብዒከ እምጉንደ እልኤ አእጋር፡ እለ አሕመልመላ ደርገ አርአያ አዕፁቅ ዓሥር፡ ኢየሱስ ክርስቶስ ወልደ ኢግዚአብሔር፡ በዘባነ ባሕር ከመ ትትለሃይ ሐመር፡ መንክር ተላህያ በዘለከ ፍቅር። ሰላም ለአፅፋረ እግርከ በደመ ቅንዋት እለ ተጠምዓ፡ እስከ ጽዕዳዌሆን ለብሰ ልብሰተ ጠባይዕ ካልአ፡ ኢየሱስ ክርስቶስ ዘተሰቀልከ በአፍአ፡ ከመ እዜኑ ኂሩተከ ወእከዉን ስምዐ፡ መምህረ ረሰይኩከ ረስየኒ ረድአ።\10\10 ሰላም ለቆምከ ሐመልማለ ቀይሕ ሥጋ፡ ክርስቶስ ቀዲሜ ጸጋ፤ ናሁ ሰፈነት ወሰፈፈት ኢንበለ ንትጋ፡ ለባሕረ ሣህልከ ዘኢይነጽፍ ፈለጋ፡ ውስተ ሕሊናየ አስተጋብእ አይጋ። ሰላም ለመልክዕከ መልክዐ ክቡር አምላክ፡ እለ ይቴሐታ ሎቱ አሪስተ ሰኰና ወብርክ፡ ኢየሱስ ክርስቶስ ሐዋርያነ መልአክ፡ ይትመላሕ እምሕሊናየ በተግሣፅከ ቡሩክ፡ ኅጠተ ደዌ ዘበቄለ ሦክ። ሰላም ለፀኦተ ነፍስከ ኅይለ ሥልጣነ ሞት ዘቀነየ፡ ጽዋዐ ፕሲካ ምሉአ ድኅረ ሠለጥከ ሰትየ፡ ጥዑመ ከናፍር ክርስቶስ እንተ ትነብር ሰደየ፡ በሞት ወበሕይወት አማኅፀንኩ ነፍስየ፡ ውስተ እዴከ ዘገብረ ሰማየ።\10\10 ሰላም ለበድነ ሥጋከ እመለኮቱ ዘኢተፈልጠ፡ ለሰዓት አሕቲ ከመ ቅጽበተ ዐይን ኅዳጠ፡ መዝገበ ባሕርይ ክርስቶስ ዘኢተአምር ተዉላጠ፡ ኢኮ ዘሐይቅ ጽጌረዳ ወዘባሕር ሰግላጠ፡ ባሕቱ ሃይማኖትየ እሁበከ ሤጠ። ሰላም ለግንዘተ ሥጋከ በአፈው ወከርቤ ሕውስ፡ ወበልብሰ ገርዜን ንጽሕ ዘኅበሪሆን ፒሦስ፡ መርዓዌ ሥርግወ አመ ትመጽእ ክርስቶስ ዐሥረኒ ለቀበላከ በማኅቶተ ምግባር ውዱስ፡ ከመ ድናግል ጠባባት ዘኁልቆን ኃምስ። ሰላም ለመቃብርከ መካነ ምሥጢር ጎልጎታ፡ ቀዳሚ አዳም ዘኢተቀብረ በዉስቴታ፡ ኢየሱስ ክርስቶስ በረከተ ኤልይስ ዘሰራጵታ፡ ሣህልከ ወምሕረትከ ይመግበኒ በዖታ፡ ከመ ሐገፋ ወሥሙር ወልታ።\10\10 ሰላም ለትንሣኤከ እምድኅረ ዕለታት ክልኤ፡ ዐቀብተ መቃብር አፍላፍ እንበለ ይስምዑ ቀርነ ጽዋዔ፡ ወበእንተዝ ይብሉከ ክርስቶስ በኩረ ትንሣኤ፡ ተአመንኩ ቅድመ ገጸ ኩሉ ጉባኤ፡ ኪያከ አበ ወኪያከ ረዳኤ። ሰላም ለትንሣኤከ እንተ ተጠየቀ ቦቱ፡ ዜና ትንሣኤሆም በክብር ለቁዱሳን ዘሞቱ፡ ኢየሱስ ክርስቶስ ለዳዊት ቀርነ መንግሥትሱ፡ በዓለ ትንሣኤ ፋሲካነ ዝንቱ፡ እስመ ሥርዓቱ ለእስራኤል ውእቱ። ሰላም ለዕርገትከ ዘኢይትረከብ መጠኑ፡ ወለንብረትከ ሰላም ለአቡከ ውስተ የማኑ፡ ኢየሱስ ክርስቶስ እለ ኢያከ ተአመኑ፡ ቅዱሳነ ዘእምኅቤከ ወንጹሐነ ይኩኑ፡ ጰራቅሊጦስሃ መንፈስከ ፈኑ።\10\10 ሰላም እምብ ለምጽአትከ ከዋላ፡ በደመና ሰማይ ብርህት እንተ ትፀድል እምሥነ ዕብላ፤ አመ ትመጽእ በስብሐት ክርስቶስ ርእሰ መሐላ፡ ጸውዐነ ለአግብርቲከ ውስተ ዐፀደ ፍግዕ ወተድላ፡ ናንሶሱ ምስሌከ በሐዳስ ቀጸላ። እምሥራቀ ፀሐይ እስከነ ዐረብ ይትአኮት ስሙ ለእግዚአብሔር አምላክነ፡ ኢያከ ወልደ ዘፈነወ ለነ፡ ኢየሱስ ክርስቶስ ሊቀ ካህናቲነ፡ አስተጋብአነ ኅበ ትረፍቅ መካነ፡ እስመ ዝርዋን አግብርቲከ ንሕነ። ስብሐት ለከ አምላክየ በኁልቄ ኩሉ ሥዕርትየ፡ ስብሐት ለከ አምላክየ በኁልቄ ኩሉ ዘተርአየ፡ ስብሐት ለከ አምላክየ በኁልቄ ኩሉ ዘኢያስተርአየ፡ ስብሐተ ሥላሴከ ወትረ ይነግር አፍየ። እምክሉ ይኄይስ በሥላሴከ\10\10 ተአምኖ፡ ወበወላዲትከ ተማኅፅኖ፡ ኢየሱስ ክርስቶስ እምቤተ መንግሥት ወተክህኖ፡ ተሰብኦተከ እመቦ ዘያስተሐቅር መኒኖ፡ ይንኰ ርኩር ታሕተ ደይን ግዱፈ ከዊኖ። ሰላም ሰላም ለኩሎን መልክዕከ፡ አምሳለ መልክዑ ለአቡከ፡ ኢየሱስ ክርስቶስ ሕማማተ መስቀል ዘፆርከ፡ ኅብአኒ እምገጸ ሞት በእንተ ማርያም እምከ፡ አምላኪየ አምላኪየ ኢይጽናዕ ልብከ። አምላክ ምድረ ወሰማያት፡ አማላከ ባሕር ወቀላያት፡ ወአምላከ ኩሉ ፍጥረት፡ አምላኮሙ አንተ ለአበው ቀደምት፡ አምላኮሙ ለነቢያት፡ አምላኮሙ ለሐዋርያት፡ አምላከ ጻድቃን ወሰማዕት፡ መሐረነ ለነ አምላክነ እስመ\10\10 ግብረ እደከ ንሕነ፡ ወኢትዝክር ኩሎ አበሳነ። ኦ እግዚእየ ኢየሱስ ክርስቶስ ዕቀበኒ ወአድኅነኒ እመከራ ሥጋ ወነፍስ ሊተ ለገብርከ፡ ሊተ ለአመትከ።\10\10</string>
    <string name="melkea_eyesus_name">መልክዐ ኢየሱስ</string>
    <string name="melkea_mariam_name">መልክዐ ማርያም</string>
    <string name="the_friday_name">ዉዳሴ ማርያም ዘዓርብ</string>
    <string name="the_monday_name">ዉዳሴ ማርያም ዘሰኑይ</string>
    <string name="the_saturday_name">ዉዳሴ ማርያም ዘቀዳሚት</string>
    <string name="the_sunday_name">ዉዳሴ ማርያም ዘሰንበት</string>
    <string name="the_thursday_name">ዉዳሴ ማርያም ዘኃሙስ</string>
    <string name="the_tuesday_name">ዉዳሴ ማርያም ዘሠሉስ</string>
    <string name="the_wednesday_name">ዉዳሴ ማርያም ዘረቡዕ</string>
    <string name="tselot_zezewter_name">ጸሎት ዘዘወትር</string>
    <string name="yewedsewa_melaket_name">ይዌድስዋ መላእክት</string>
</resources>